@@ -1,3 +1,7 @@
+2014-06-14
+	Fix crash evaluating "a \\ b"
+	Fix INPUT command in FLTK for scrolled display
+
 2014-06-11
 	Android changes:
 	- Run by URL/QrCode.
